samples/_failures_safe/1761301694_62ea5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0d40294.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c0d40294.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra distances from vertex %d:\n",
      |     ^~~~~~
./samples/SAFE/__tmp_c0d40294.c:188:5: error: expected declaration or statement at end of input
